--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
@@ -37,5 +40,5 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2"
   },
-  "browserslist": "> 1%, last 2 versions",
+  "browserslist": "> 1%, last 2 versions"
 }
